# config_manager

./: README.md  pyproject.toml
client_config_manager/: clinet_configs.json  config_manager.py
