[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "config-manager"
version = "0.1.0"
authors = [
  { name="khgapparov", email="khgapparov@gmail.com" },
]
description = "A reusable Python module for managing client configurations."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28.1",
]

[project.urls]
"Homepage" = "https://github.com/khgapparov/config_manager"
"Bug Tracker" = "https://github.com/khgapparov/config_manager/issues"